--- a/style.css
+++ b/style.css
@@ -1,48 +1,46 @@
+.container-intro{
+
+    position: absolute;
+    top: 50%;
+    height: 80px;
+    left: 50%;
+    margin-top: -50px;
+    text-align: center;
+    width:100px;
+    margin-left:-50px;
+
+}
+
+
 .hello-intro > h2 {
     font-size: 2em;
     font-family: "Lato", sans-serif;
     font-weight: 300;
-    font-style: bold;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 53%;
-    margin-top: -50px;
-    margin-left: -100px;
+
 }
 
-.container-intro {
-    position: absolute;
-    z-index: 10;
-    top: 55%;
-    width: 200px;
-    height: 80px;
-    left: 50%;
-    margin-top: -45px;
-    margin-left: -100px;
+ul{
+
+    list-style: none;
+    display:flex;
+    flex-direction: row;
+    padding-left: 0;
+    justify-content: center;
+
+
 }
 
-.github {
+
+.github, .portfolio {
     text-decoration: none;
     font-size: 16px;
     font-family: "Lato", sans-serif;
     font-weight: 300;
     color: #A9A9A9;
     text-align: center;
-    display: inline-block;
-    margin-left: 5%;
+    margin:6px;
 }
 
-.portfolio {
-    text-decoration: none;
-    font-size: 16px;
-    font-family: "Lato", sans-serif;
-    font-weight: 300;
-    color: #A9A9A9;
-    text-align: center;
-    display: inline-block;
-    margin-left: 5%;
-}
 
 body {
     margin: 0;
@@ -53,7 +51,17 @@ body {
 #particles-js {
     height: 100%;
     background: #eaf1f8;
+    display:flex;
+    justify-content: center;
+    align-items:center;
 }
+
+.particles-js-canvas-el{
+
+position:absolute;
+
+}
+
 
 .container-intro a:hover {
     color: #383838;
@@ -61,29 +69,26 @@ body {
     font-weight: none
 }
 
-.triangle-down {
-    width: 0;
-    height: 0;
-    border-left: 9px solid transparent;
-    border-right: 9px solid transparent;
-    border-top: 18px solid #555;
-    position: relative;
-    top: 360%;
-    left: 6%;
-    margin-top: -50px;
-    margin-left: -100px;
+.scroll_down {
+    text-align: center;
+    width:100px;
+    margin-left:-50px;
+    position: absolute;
+    bottom:20px;
+    left:50%;
 }
 
-h4 {
+
+h1 {
     font-family: "Lato", sans-serif;
     font-weight: 400;
     font-size: 2.3em;
     margin-bottom: 0.5em;
     text-align: center;
-    margin-top: 55px;
+    margin-top: 45px;
 }
 
-p {
+p{
     font-family: "Lora", serif;
     color: #858585;
     text-align: center;
@@ -91,8 +96,51 @@ p {
     font-size: 1.5em;
     display: block;
     margin: 0 auto;
-    width:80%;
-    margin-bottom: 16px;
+    width:60%;
+    margin-bottom: 25px;
+    font-weight:500;
+}
+
+h3{
+    font-family: "Lora", serif;
+    color: #858585;
+    text-align: center;
+    display: block;
+    line-height: .4;
+    margin: 0 auto;
+    width:60%;
+    font-weight:500;
+    font-size: 1.4em;
+    margin-bottom: 1px;
+}
+
+
+ol {
+    font-family: "Lora", serif;
+    color: #858585;
+    line-height: 1.8;
+    font-size: 1.2em;
+    list-style:none;
+    margin-bottom: 30px;
+    list-style-position: inside;
+    display:flex;
+    flex-direction: row;
+    padding-left: 0;
+    justify-content: center;
+
+}
+
+ol li a {
+    text-decoration: none;
+    color: #2C3E50;
+    font-family: "Lora", serif;
+    background-color: transparent;
+    margin-right:15px;
+
+}
+
+ol li a:hover {
+    background-color: #F8F8F8;
 }
 
 .about_me > a {
@@ -236,11 +284,10 @@ background-color: black;
 @media screen and (max-width:1100px) and (min-width:0px) {
     .hello-intro > h2 {
         font-size: 2.1em;
-        left: 55%;
     }
 
     .container-projects {
-        height: 570px;
+        height: 400px;
         width: 90%;
     }
 
@@ -251,9 +298,9 @@ background-color: black;
 
 }
 
-@media screen and (max-width:564px) {
+@media screen and (min-width:400px) and (max-width:850px) {
     .container-projects {
-        height: 852px;
+        height: 780px;
         width: 100%;
     }
 
@@ -263,8 +310,6 @@ background-color: black;
 @media screen and (max-width:449px) {
     .hello-intro > h2 {
         font-size: 2.1em;
-        left: 60%;
-        top: 47%;
     }
 
     .container-projects {
@@ -277,5 +322,5 @@ background-color: black;
         width: 260px;
     }
 
-}
 
+}
