--- a/style.css
+++ b/style.css
@@ -228,43 +228,6 @@ footer {
     font-weight: 300;
 }
 
-.iphone-dct > img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.iphone-dct > h1 {
-    font-size: 2em;
-    font-family: "Lato", sans-serif;
-    font-weight: 700;
-    text-align: center;
-}
-
-.dct-p > p {
-    text-align: left;
-    font-family: "Lora", serif;
-    font-size: 1.1em;
-    line-height: 1.5;
-    color: black;
-    margin-bottom: 50px;
-    width: 60%;
-    margin: 0 auto;
-
-}
-
-.dct-links {
-    text-decoration: none;
-    color: #2C3E50;
-    font-family: "Lora", serif;
-    background-color: transparent;
-}
-
-.dct-p a:hover {
-    background-color: #F8F8F8;
-}
-
-
 .graph { 
     display: block;
     margin: 0 auto;
@@ -273,7 +236,56 @@ footer {
     margin-bottom:70px;
 }
 
-.iphone-dct > hr{
+.projects-iphone > img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.projects-iphone > h1 {
+    font-size: 2em;
+    font-family: "Lato", sans-serif;
+    font-weight: 700;
+    text-align: center;
+}
+
+.projects-p > p {
+    text-align: left;
+    font-family: "Lora", serif;
+    font-size: 1.1em;
+    line-height: 1.5;
+    color: black;
+    margin-bottom: 50px;
+    width: 60%;
+    margin: 0 auto;
+}
+
+.projects-links {
+    text-decoration: none;
+    color: gray;
+    font-family: "Lora", serif;
+    background-color: transparent;
+}
+
+.projects-p a:hover {
+    background-color: #F8F8F8;
+}
+
+.center{
+    display:inline-block;
+    margin-left:28%;
+
+}
+
+.projects-iphone- > hr{
+
+width:60%;
+background-color: black;
+
+}
+
+
+.projects-iphone > hr{
 
 width:60%;
 background-color: black;
