--- a/style.css
+++ b/style.css
@@ -181,9 +181,9 @@ html {
     width: 280px;
     position: relative;
     float: left;
-    -webkit-box-shadow: 0 8px 6px -6px black;
-    -moz-box-shadow: 0 8px 6px -6px black;
-    box-shadow: 0 8px 6px -6px black;
+    -webkit-box-shadow: 4px 5px 6px 0px rgba(97,91,97,1);
+    -moz-box-shadow: 4px 5px 6px 0px rgba(97,91,97,1);
+    box-shadow: 4px 5px 6px 0px rgba(97,91,97,1);
 
 }
 
@@ -281,7 +281,6 @@ footer {
     display: flex;
     justify-content: center;
     flex-direction: row;
-    transform: scale(.67)
 }
 
 
@@ -290,10 +289,6 @@ footer {
     width:60%;
     background-color: black;
 
-}
-
-.mini-proj{
-    width:100%;
 }
 
 
@@ -351,6 +346,17 @@ footer {
         font-size: .9em;
 
     }
+
+    .mini-proj{
+        width:100%;
+    }
+
+
+    .nasa-flex{
+        transform: scale(.67)
+    }
+
+
 
     
 }
