--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ ol li a:hover {
 .container-projects {
     background-color: #ffffff;
     height: 640px;
-    width: 80%;
+    width: 75%;
     margin-top: 50px;
     margin: auto;
     border-radius: 4px;
@@ -312,7 +312,7 @@ footer {
 
 @media screen and (min-width:550px) and (max-width:850px) {
     .container-projects {
-        height: 600px;
+        height: 900px;
         width: 80%;
     }
     
@@ -323,7 +323,7 @@ footer {
 
 @media screen and (min-width:0px) and (max-width:630px) {
     .container-projects{
-        height:1250px;
+        height:1400px;
     }
 }
 
@@ -336,7 +336,7 @@ footer {
     }
     
     .container-projects {
-        height: 1250px;
+        height: 1450px;
         width: 100%;
     }
     
@@ -344,7 +344,10 @@ footer {
         height: 260px;
         width: 260px;
     }
-    
+    p{
+        line-height: 1.4;
+        width:70%;
+    }
     
     .projects-iphone > h1 {
         font-size:1.5em;
