--- a/style.css
+++ b/style.css
@@ -168,9 +168,9 @@ ol li a img {
     width: 280px;
     position: relative;
     float: left;
-    -webkit-box-shadow: 4px 5px 6px 0px rgba(97,91,97,1);
-    -moz-box-shadow: 4px 5px 6px 0px rgba(97,91,97,1);
-    box-shadow: 4px 5px 6px 0px rgba(97,91,97,1);
+  -webkit-box-shadow: 4px 5px 6px 0px rgba(168, 168, 168);
+    -moz-box-shadow: 4px 5px 6px 0px rgb(168, 168, 168);
+    box-shadow: 4px 5px 6px 0px rgba(168, 168, 168);
 }
 
 
