--- a/style.css
+++ b/style.css
@@ -383,8 +383,8 @@ footer {
     font-size: 1.5em;
   }
 
-  .projects-p {
-    width: 100%;
+  .projects-p p{
+    width: 75%;
     font-size: 0.9em;
   }
 
