--- a/style.css
+++ b/style.css
@@ -323,7 +323,7 @@ footer {
 }
 
 /* MEDIA QUERY computer*/
-@media screen and (max-width: 1100px) and (min-width: 0px) {
+@media screen and (max-width: 1120px) and (min-width: 0px) {
   .hello-intro > h2 {
     font-size: 2.1em;
   }
@@ -340,7 +340,7 @@ footer {
   }
 }
 
-@media screen and (min-width: 550px) and (max-width: 850px) {
+@media screen and (min-width: 550px) and (max-width: 940px) {
   .container-projects {
     height: 900px;
     width: 80%;
@@ -351,9 +351,22 @@ footer {
   }
 }
 
-@media screen and (min-width: 0px) and (max-width: 630px) {
+@media screen and (min-width: 500px) and (max-width: 675px) {
   .container-projects {
-    height: 1700px;
+    height: 2700px;
+  }
+
+  .dct,
+  .nasa,
+  .mini-projects {
+    margin-top:30px;
+   transform: scale(1.2);
+  }
+
+  .dct:hover,
+  .nasa:hover,
+  .mini-projects:hover {
+   transform: scale(1.25);
   }
 }
 
