--- a/style.css
+++ b/style.css
@@ -164,9 +164,9 @@ a{
   width: 280px;
   position: relative;
   float: left;
-  -webkit-box-shadow: 4px 5px 6px 0px rgba(168, 168, 168);
+  /* -webkit-box-shadow: 4px 5px 6px 0px rgba(168, 168, 168);
   -moz-box-shadow: 4px 5px 6px 0px rgb(168, 168, 168);
-  box-shadow: 4px 5px 6px 0px rgba(168, 168, 168);
+  box-shadow: 4px 5px 6px 0px rgba(168, 168, 168); */
 }
 
 .mini-projects div,
