--- a/style.css
+++ b/style.css
@@ -160,10 +160,12 @@ a{
 .dct,
 .nasa,
 .mini-projects {
-  height: 280px;
-  width: 280px;
+  /* height: 280px;
+  width: 280px; */
   position: relative;
   float: left;
+  height: 250px;
+  width: 290px;
 }
 
 .mini-projects div,
@@ -199,7 +201,7 @@ a{
 }
 
 footer {
-  margin-top: 50px;
+  margin-top: 80px;
   border-top: #d9d9d9 solid 1px;
   height: 120px;
   background-color: white;
@@ -261,8 +263,8 @@ footer {
   animation-fill-mode: forwards;
 }
 
-.projects-p {
-  padding-bottom: 100px;
+.mtImg{
+  width:60%;
 }
 
 @keyframes title {
@@ -324,7 +326,7 @@ footer {
 }
 
 /* MEDIA QUERY computer*/
-@media screen and (max-width: 1120px) and (min-width: 0px) {
+@media screen and (max-width: 1198px) and (min-width: 0px) {
   .hello-intro > h2 {
     font-size: 2.1em;
   }
